--- a/popup.html
+++ b/popup.html
@@ -13,11 +13,11 @@
         .hidden {
             display: none;
         }
-        .prc-short-massage {
-            white-space: nowrap;
-            font-size: 12px;
+        .prc-short-message {
+            font-size: 14px;
             color: #cf3839;
-            padding-top: 50px;
+            padding-top: 15px;
+            text-align: center;
         }
         .prc-top-controls {
             display: flex;
@@ -101,13 +101,36 @@
         .prc-extra-controls-slow-top, .prc-extra-controls-fast-top {
             padding-bottom: 10px;
         }
+        .icon {
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+            fill: currentColor;
+        }
+        .icon-wondering {
+            font-size: 64px;
+        }
+        .prc-short-message .icon-wondering {
+            margin-bottom: 10px;
+        }
     </style>
 
     <script src="popup.js"></script>
 </head>
 <body>
     <div id="prc-popup-no-content">
-        <div class="prc-short-massage">No audio/video content found</div>
+        <div class="prc-short-message">
+            <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <defs>
+                    <symbol id="icon-wondering" viewBox="0 0 1024 1024">
+                        <title>wondering</title>
+                        <path class="path1" d="M512 1024c282.77 0 512-229.23 512-512s-229.23-512-512-512-512 229.23-512 512 229.23 512 512 512zM512 96c229.75 0 416 186.25 416 416s-186.25 416-416 416-416-186.25-416-416 186.25-416 416-416zM745.74 601.62l22.488 76.776-437.008 128.002-22.488-76.776zM256 320c0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64s-64-28.654-64-64zM640 320c0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64s-64-28.654-64-64z"></path>
+                    </symbol>
+                </defs>
+            </svg>
+            <div><svg class="icon icon-wondering"><use xlink:href="#icon-wondering"></use></svg></div>
+            <div>No audio/video content found on this page.</div>
+        </div>
     </div>
 
     <div id="prc-popup-content" class="hidden">
